[gd_scene load_steps=35 format=3 uid="uid://c2lbjxaqnvmce"]

[ext_resource type="Script" uid="uid://ctx5ewmggondy" path="res://Scenes/Sprites/Player.gd" id="1_ln0pj"]
[ext_resource type="Texture2D" uid="uid://b16u0hglo5w4s" path="res://Resource/sprites/player_main.png" id="2_2kpgt"]
[ext_resource type="Shader" uid="uid://cxx60la4xs0v3" path="res://EngineResources/Shaders/Player.gdshader" id="2_rf86v"]
[ext_resource type="Script" uid="uid://c3cq058lcherf" path="res://Scripts/Classes/SoundPlayer.gd" id="3_u855s"]
[ext_resource type="AudioStream" uid="uid://dwkck5uajkfj2" path="res://Resource/sound/pickup_food.wav" id="4_o4t4y"]
[ext_resource type="AudioStream" uid="uid://cjj351noqlonx" path="res://Resource/sound/pickup_toy.wav" id="5_rfh5d"]
[ext_resource type="Script" uid="uid://djfjo0176gux6" path="res://Scenes/Sprites/Smokes.gd" id="7_f2m5h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tmshu"]
shader = ExtResource("2_rf86v")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/weight = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7qkvl"]
height = 22.0

[sub_resource type="Animation" id="Animation_4xyy1"]
resource_name = "CheckMap"
length = 3.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.45, 0.55, 1.05, 1.1, 1.3, 1.35, 2.05, 2.1, 3.1, 3.2, 3.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [150, 151, 152, 153, 154, 155, 157, 155, 156, 155, 158, 159, 161, 160]
}

[sub_resource type="Animation" id="Animation_urlhf"]
resource_name = "Down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [35, 32, 33, 34]
}

[sub_resource type="Animation" id="Animation_1fth1"]
resource_name = "EatFood"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 15]
}

[sub_resource type="Animation" id="Animation_o00rp"]
resource_name = "Left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [19, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_aae7p"]
resource_name = "R1"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_qqoqo"]
resource_name = "R10"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [55, 52, 53, 54]
}

[sub_resource type="Animation" id="Animation_7pt6q"]
resource_name = "R11"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [59, 56, 57, 58]
}

[sub_resource type="Animation" id="Animation_kb70p"]
resource_name = "R12"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [63, 60, 61, 62]
}

[sub_resource type="Animation" id="Animation_0buuw"]
resource_name = "R2"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_wtci4"]
resource_name = "R3"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [15, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_m337f"]
resource_name = "R4"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [23, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_6a3i1"]
resource_name = "R5"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [27, 24, 25, 26]
}

[sub_resource type="Animation" id="Animation_70qb4"]
resource_name = "R6"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [31, 28, 29, 30]
}

[sub_resource type="Animation" id="Animation_055ts"]
resource_name = "R7"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [39, 36, 37, 38]
}

[sub_resource type="Animation" id="Animation_bj50t"]
resource_name = "R8"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [43, 40, 41, 42]
}

[sub_resource type="Animation" id="Animation_rheu3"]
resource_name = "R9"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [47, 44, 45, 46]
}

[sub_resource type="Animation" id="Animation_ypxa3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [80]
}

[sub_resource type="Animation" id="Animation_5sv3l"]
resource_name = "Right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [51, 48, 49, 50]
}

[sub_resource type="Animation" id="Animation_w6ibi"]
resource_name = "StandDown"
length = 10.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 1.6, 1.7, 2.7, 2.8, 3, 3.1, 4.1, 4.4, 5.4, 5.5, 6.5, 6.6, 8.1, 8.2, 9.2, 9.3, 10.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [80, 82, 80, 83, 84, 86, 84, 86, 84, 85, 84, 87, 80, 82, 81, 82, 80, 83, 84, 87]
}

[sub_resource type="Animation" id="Animation_v8w4f"]
resource_name = "StandDownLeft"
length = 10.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 1.6, 1.7, 2.7, 2.8, 3, 3.1, 4.1, 4.4, 5.4, 5.5, 6.5, 6.6, 8.1, 8.2, 9.2, 9.3, 10.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 74, 72, 75, 76, 78, 76, 78, 76, 77, 76, 79, 72, 74, 73, 74, 72, 75, 76, 79]
}

[sub_resource type="Animation" id="Animation_sdpl7"]
resource_name = "StandDownRight"
length = 10.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 1.6, 1.7, 2.7, 2.8, 3, 3.1, 4.1, 4.4, 5.4, 5.5, 6.5, 6.6, 8.1, 8.2, 9.2, 9.3, 10.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [88, 90, 88, 91, 92, 94, 92, 94, 92, 93, 92, 95, 88, 90, 89, 90, 88, 91, 92, 95]
}

[sub_resource type="Animation" id="Animation_5dpxj"]
resource_name = "StandUp"
length = 10.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 1.6, 1.7, 2.7, 2.8, 3, 3.1, 4.1, 4.4, 5.4, 5.5, 6.5, 6.6, 8.1, 8.2, 9.2, 9.3, 10.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [64, 66, 64, 67, 68, 70, 68, 70, 68, 69, 68, 71, 64, 66, 65, 66, 64, 67, 68, 71]
}

[sub_resource type="Animation" id="Animation_xlvay"]
resource_name = "Up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vx7t4"]
_data = {
&"CheckMap": SubResource("Animation_4xyy1"),
&"Down": SubResource("Animation_urlhf"),
&"EatFood": SubResource("Animation_1fth1"),
&"Left": SubResource("Animation_o00rp"),
&"R1": SubResource("Animation_aae7p"),
&"R10": SubResource("Animation_qqoqo"),
&"R11": SubResource("Animation_7pt6q"),
&"R12": SubResource("Animation_kb70p"),
&"R2": SubResource("Animation_0buuw"),
&"R3": SubResource("Animation_wtci4"),
&"R4": SubResource("Animation_m337f"),
&"R5": SubResource("Animation_6a3i1"),
&"R6": SubResource("Animation_70qb4"),
&"R7": SubResource("Animation_055ts"),
&"R8": SubResource("Animation_bj50t"),
&"R9": SubResource("Animation_rheu3"),
&"RESET": SubResource("Animation_ypxa3"),
&"Right": SubResource("Animation_5sv3l"),
&"StandDown": SubResource("Animation_w6ibi"),
&"StandDownLeft": SubResource("Animation_v8w4f"),
&"StandDownRight": SubResource("Animation_sdpl7"),
&"StandUp": SubResource("Animation_5dpxj"),
&"Up": SubResource("Animation_xlvay")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_leubu"]
radius = 24.0208

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 50
z_as_relative = false
collision_mask = 2
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 0.5
script = ExtResource("1_ln0pj")
collect_item_follow_length = 28.0
metadata/_edit_vertical_guides_ = [-32.0]

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_tmshu")
position = Vector2(0, -15)
texture = ExtResource("2_2kpgt")
hframes = 13
vframes = 13
frame = 80

[node name="Shape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_7qkvl")

[node name="Anima" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vx7t4")
}
playback_auto_capture = false

[node name="CollectingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="Collision" type="CollisionShape2D" parent="CollectingArea"]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_leubu")
debug_color = Color(0, 0.7, 0.2275, 0.42)

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("3_u855s")
sounds = {
"GetCheese": ExtResource("4_o4t4y"),
"GetToy": ExtResource("5_rfh5d")
}

[node name="NavigationPoint" type="Node2D" parent="."]
position = Vector2(0, 5)

[node name="Smokes" type="Node2D" parent="."]
top_level = true
script = ExtResource("7_f2m5h")

[connection signal="animation_finished" from="Anima" to="." method="anima_finished"]
[connection signal="area_entered" from="CollectingArea" to="." method="collect_area"]
